# clothsim

./: CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  Cloth.cpp  Cloth.h  IBuffer.cpp  IBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VArray.cpp  VArray.h  VBuffer.cpp  VBuffer.h  VBufferLayout.cpp  VBufferLayout.h  VecUtils.cpp  VecUtils.h  main.cpp  vcpkg.json
shaders/: Basic.shader
